--- a/concepts/core-architecture/mocking-architecture.mdx
+++ b/concepts/core-architecture/mocking-architecture.mdx
@@ -1,321 +1,350 @@
 ---
-title: "Mocking with GoogleMock"
-description: "Dive into the concepts behind GoogleMock, including how mocks are defined, how expectations and behaviors are specified, and how the framework intercepts calls at runtime. Learn the rationale behind ON_CALL, EXPECT_CALL, and MOCK_METHOD macros."
+title: "Mocking Model and Call Expectations"
+description: "Understand how GoogleMock enables behavior-driven development by simulating objects, specifying expected calls, and defining custom actions for mock methods. This page unpacks the conceptual model for mocks, expectations, and action sequences."
 ---
 
-# Mocking with GoogleMock
+# Mocking Model and Call Expectations
 
-Dive deep into the concepts that power GoogleMock, the powerful C++ mocking framework. This guide explains how mocks are defined, how expectations and behaviors are specified with the key macros `MOCK_METHOD`, `EXPECT_CALL`, and `ON_CALL`, and how GoogleMock intercepts calls at runtime to verify your code.
-
----
-
-## What Is a Mock?
-
-Imagine you are testing a component that relies on a collaborator class, but you want to control or observe how that collaborator is used without depending on its real, possibly complex, implementation. A **mock object** stands in for the real collaborator, allowing you to specify which methods are expected to be called, with what arguments, how often, and what they should return or do.
-
-Mocks let you isolate code units by simulating interactions, enabling precise, readable, and powerful unit tests.
-
-## Defining Mocks with `MOCK_METHOD`
-
-At the heart of GoogleMock is the `MOCK_METHOD` macro, used inside a mock class to define mocked methods that simulate virtual functions of your interfaces or classes under test.
-
-### Syntax
-
-```cpp
-MOCK_METHOD(ReturnType, MethodName, (Args...), (Specs...));
-```
-
-- **ReturnType** – The function’s return type.
-- **MethodName** – The method’s identifier.
-- **(Args...)** – The argument list in parentheses. Note: if the argument list contains types with commas (e.g., `std::pair<int, int>`), wrap types in extra parentheses or use type aliases.
-- **(Specs...)** – Optional qualifiers such as `const`, `override`, `noexcept`, calling conventions, or reference qualifiers.
-
-### Example
-
-```cpp
-class Foo {
- public:
-  virtual ~Foo() {}
-  virtual int GetSize() const = 0;
-  virtual std::string Describe(const char* name) = 0;
-  virtual bool Process(int elem, int count) = 0;
-};
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(std::string, Describe, (const char* name), (override));
-  MOCK_METHOD(bool, Process, (int elem, int count), (override));
-};
-```
-
-**Tip:** Always declare mocks in the `public:` section, even if the original method is `protected` or `private`. This enables `EXPECT_CALL` and `ON_CALL` to access the mock methods.
-
-### Mocking Non-Virtual Methods
-
-While `MOCK_METHOD` requires methods to be virtual, GoogleMock permits mocking non-virtual functions for scenarios like high-performance dependency injection by defining an unrelated mock class with matching methods.
-
-See the [gMock Cookbook section on Mocking Non-Virtual Methods](gmock_cook_book.md#MockingNonVirtualMethods) for details.
+Understand how GoogleMock enables behavior-driven development by simulating objects, specifying expected calls, and defining custom actions for mock methods. This page unpacks the conceptual model for mocks, expectations, and action sequences.
 
 ---
 
-## Specifying Expectations with `EXPECT_CALL`
+## Introduction to the Mocking Model
 
-`EXPECT_CALL` is how you tell GoogleMock which mock method calls you expect, their arguments, how often they should be invoked, and what behaviors they should perform.
+GoogleMock facilitates precise control over C++ object behaviors in tests through *mock objects*. These mocks replace real implementations, letting you simulate how objects behave and interact in your system. The mocking model revolves around:
 
-### Basic Syntax
+- **Mock Objects & Methods:** Stand-ins for real objects with mocked methods creating flexible interfaces.
+- **Expectations:** Declarations of expected calls, including argument matchers, order, and frequency.
+- **Actions:** Behaviors assigned to the mocked methods when called — including returning values, side effects, or invoking callbacks.
+- **Sequences & Ordering Constraints:** Mechanisms to enforce call order and dependencies in tests.
 
-```cpp
-EXPECT_CALL(mock_object, MethodName(matchers...))
-    .With(multi_arg_matcher)        // Optional
-    .Times(cardinality)             // Optional
-    .InSequence(sequences...)       // Optional
-    .After(expectations...)         // Optional
-    .WillOnce(action)               // Optional, can appear multiple times
-    .WillRepeatedly(action)         // Optional
-    .RetiresOnSaturation();         // Optional
-```
+This framework supports behavior-driven development by letting you specify the expected *interactions* between objects and then verify them automatically during test execution.
 
-- **`mock_object`**: The instance of your mock.
-- **`MethodName`**: The method to expect a call on.
-- **`matchers...`**: Matchers corresponding to each method argument to specify argument constraints.
+## Mock Objects: Simulated Collaborators
 
-### What Does It Do?
+A *mock object* acts as a proxy for a real class instance, enabling you to set expectations on method calls dynamically. To create a mock:
 
-`EXPECT_CALL` sets an expectation that at runtime, the specified method will be called with arguments matching specified matchers. If the actual calls don't meet expectations (wrong arguments, wrong number of calls, out-of-order invocation, etc.), GoogleMock reports failures immediately.
+- Define a mock class inheriting from the abstract or concrete class.
+- Use the `MOCK_METHOD` macro to specify mock methods.
 
-### Matchers
-
-Matchers let you specify flexible or exact argument constraints (see [Matchers Reference](reference/matchers.md)). For example:
-
-```cpp
-EXPECT_CALL(foo, Bar(5));            // Argument must equal 5
-EXPECT_CALL(foo, Bar(testing::_));   // Any argument is accepted
-EXPECT_CALL(foo, Bar(testing::Gt(0))); // Argument greater than 0
-```
-
-### Chaining Clauses
-
-- **`.With(multi_arg_matcher)`**: Matches arguments collectively as a tuple for complex relations like "first arg less than second".
-- **`.Times(cardinality)`**: Specifies how many times this call is expected. Use cardinalities like `AnyNumber()`, `Exactly(n)`, `AtLeast(n)`, etc.
-- **`.InSequence(sequences...)`**: Assigns calls to sequences to enforce call order.
-- **`.After(expectations...)`**: Specifies dependencies so that the call only makes sense after other expectations are met.
-- **`.WillOnce(action)`**: Defines the behavior for the next matching call. Multiple `WillOnce` clauses can specify behaviors for consecutive calls.
-- **`.WillRepeatedly(action)`**: Defines the behavior for all subsequent matching calls after the `WillOnce`s are consumed.
-- **`.RetiresOnSaturation()`**: As soon as the expectation is fulfilled the expected number of times, it is retired (ignored for subsequent calls).
-
-### Example
-
-```cpp
-using ::testing::Return;
-using ::testing::_; // wildcard matcher
-
-EXPECT_CALL(mock_foo, GetData(42))
-    .Times(3)
-    .WillOnce(Return(10))
-    .WillOnce(Return(20))
-    .WillRepeatedly(Return(30));
-
-// The first call with 42 returns 10, second returns 20, all others return 30.
-
-EXPECT_CALL(mock_foo, Process(_))
-    .Times(AnyNumber());  // Accept any number of Process calls with any argument.
-```
-
-### Matching Overloaded Methods
-
-For overloaded methods, specify the signature as usual with `MOCK_METHOD`. Use `Const()` wrapper to specify const-qualified methods in `EXPECT_CALL`. See [Selecting Overload](reference/mocking.md#SelectOverload) for disambiguation techniques.
-
-### When to Use `EXPECT_CALL`
-
-- Use when you want to verify that a method is called.
-- Setting strict constraints (arguments, order, counts).
-- Expressing precise behavior (via actions).
-
----
-
-## Setting Default Behaviors with `ON_CALL`
-
-`ON_CALL` defines what happens when a mock method is called with matching arguments but does *not* establish an expectation that the call will occur. This is useful for specifying default behavior without causing test failures if the call is not made.
-
-```cpp
-ON_CALL(mock_object, MethodName(matchers...))
-    .With(multi_arg_matcher)   // Optional
-    .WillByDefault(action);    // Required
-```
-
-`ON_CALL` helps avoid over-specifying behavior, enabling a more resilient and maintainable test suite.
-
-### Example
-
-```cpp
-using ::testing::Return;
-using ::testing::_;
-
-ON_CALL(mock_foo, GetSize())
-    .WillByDefault(Return(5));
-
-// No expectation that GetSize() will be called here.
-```
-
-### How `ON_CALL` and `EXPECT_CALL` Interact
-
-- Expectation clauses (`EXPECT_CALL`) override `ON_CALL` behavior when a matching expectation is present.
-- You can combine `ON_CALL` to customize default behaviors and `EXPECT_CALL` to verify important calls.
-
----
-
-## How Calls Are Intercepted and Matched
-
-When your code under test calls a method on a mock object, GoogleMock intercepts the call and performs the following steps:
-
-1. **Search Expectations:** It searches expectations (`EXPECT_CALL`s) in reverse order of declaration (newer override older), selecting the last matching expectation that is still active.
-2. **Check Cardinality & Active State:** Verifies if the expectation can still accept calls (not saturated or retired).
-3. **Check Argument Match:** The arguments are checked against the specified matchers.
-4. **Execute Action:** If matched and allowed, the corresponding action is executed - this might return a value, modify arguments, invoke callbacks, or do nothing.
-5. **Verify Calls:** When the mock object is destructed (or verified manually), gMock checks that all expectations were satisfied.
-
-If no matching `EXPECT_CALL` is found:
-- **If at least one `EXPECT_CALL` exists for the method but none match arguments:** This is an unexpected call and is an error.
-- **If no `EXPECT_CALL` is defined for the method:** This is an uninteresting call.
-
-Depending on mock strictness mode, uninteresting calls may generate warnings, errors, or be silently ignored.
-
----
-
-## Mock Object Strictness: Nice, Naggy, and Strict Mocks
-
-GoogleMock supports three modes of handling uninteresting calls to mocks.
-
-| Mock Type  | Uninteresting Calls Behavior                               | Use Case                               |
-|------------|------------------------------------------------------------|--------------------------------------|
-| NiceMock   | Silently ignores uninteresting calls                       | Tests where unexpected calls are OK  |
-| NaggyMock  | Prints warnings on uninteresting calls (default behavior)  | Useful during test creation/debugging|
-| StrictMock | Treats uninteresting calls as errors, failing the test     | Enforces strict expectations         |
-
-Each is a class template wrapper around your mock class:
-
-```cpp
-using ::testing::NiceMock;
-using ::testing::NaggyMock;
-using ::testing::StrictMock;
-
-NiceMock<MockFoo> nice_mock;  // suppresses uninteresting call warnings
-NaggyMock<MockFoo> naggy_mock;  // defaults to warnings
-StrictMock<MockFoo> strict_mock;  // fails on uninteresting calls
-```
-
-Strictness modifiers only affect uninteresting calls — calls to methods with no `EXPECT_CALL`. Unexpected calls always cause errors regardless of strictness.
-
-### When to Use Each
-
-- Use **NiceMock** for tests where you don't care about irrelevant interactions.
-- Use **NaggyMock** when you want to be warned about stray calls.
-- Use **StrictMock** to enforce precise control and detect unexpected interactions.
-
----
-
-## Workflow Summary
-
-1. **Define Mock Classes:** Use `MOCK_METHOD` in derived mock classes to mock the virtual interface.
-2. **Set Default Behaviors:** Use `ON_CALL` in test setup or mock constructor to set default return values or side effects.
-3. **Set Expectations:** Use `EXPECT_CALL` before exercising your tested code to define which calls must happen.
-4. **Exercise Code:** Run your code under test; interactions with mocks are intercepted and verified.
-5. **Verify Expectations:** Upon mock destruction (or explicit verification), expectations are checked and violations reported.
-
----
-
-## Practical Example
+Example:
 
 ```cpp
 #include <gmock/gmock.h>
+
+class Interface {
+ public:
+  virtual ~Interface() = default;
+  virtual int Compute(int x) = 0;
+  virtual void Process(const std::string& data) = 0;
+};
+
+class MockInterface : public Interface {
+ public:
+  MOCK_METHOD(int, Compute, (int x), (override));
+  MOCK_METHOD(void, Process, (const std::string& data), (override));
+};
+```
+
+Mock methods can be overridden further to handle constness, noexcept, or calling conventions as needed.
+
+### Mock Object Lifecycle and Verification
+
+When a mock object is destroyed, GoogleMock automatically verifies that all *expectations* set on the mock have been met. You can also manually verify and clear expectations early using:
+
+```cpp
+::testing::Mock::VerifyAndClearExpectations(&mock_object);
+// or
+::testing::Mock::VerifyAndClear(&mock_object); // also clears default actions
+```
+
+If expectations are unmet or violated, GoogleMock reports failures immediately to aid debugging.
+
+---
+
+## Setting Expectations with EXPECT_CALL
+
+To specify that a mock method should be called with particular arguments a certain number of times, use the `EXPECT_CALL` macro.
+
+### Syntax Overview
+
+```cpp
+EXPECT_CALL(mock_object, MethodName(argument_matchers...))
+    .With(multi_arg_matcher)?
+    .Times(cardinality)?
+    .InSequence(sequences...)*
+    .After(expectations...)*
+    .WillOnce(action)*
+    .WillRepeatedly(action)?
+    .RetiresOnSaturation()?;
+```
+
+- Clauses marked with a question mark are optional.
+- `With` is at most once, must be the first clause if used.
+- `Times` is optional; default is inferred.
+- `InSequence` and `After` can appear multiple times to specify ordering.
+- `WillOnce` and `WillRepeatedly` specify the behavior when matched.
+- `RetiresOnSaturation` controls expectation lifetime.
+
+### Understanding the Components
+
+- **Argument Matchers:** Specify how each argument should be matched (e.g., specific values, wildcards `_`, or sophisticated predicates). Missing matchers imply matching any value.
+
+- **With Clause:** Matches the full tuple of arguments against a multi-argument matcher, adding more complex constraints on arguments collectively.
+
+- **Times Clause:** Specifies how many times the call is expected. Possible values include exact counts (`Exactly(3)`), ranges (`Between(2,4)`), or open bounds (`AnyNumber()`, `AtLeast(n)`). If omitted, GoogleMock infers based on actions specified.
+
+- **Sequence & After Clauses:** Define ordering constraints among expectations:
+  - `InSequence` places expectations in a particular sequence.
+  - `After` specifies that the current expectation must occur only after some other expectations have been satisfied.
+
+- **Actions:** Define what happens when the mock method is called and the expectation matches.
+  - `WillOnce` actions are performed for individual calls.
+  - `WillRepeatedly` action is performed for all subsequent calls after `WillOnce` actions are exhausted.
+
+- **RetiresOnSaturation:** Once the expected number of calls is reached, the expectation retires and no longer matches further calls.
+
+### Example: Specifying Expectations
+
+```cpp
 using ::testing::Return;
 using ::testing::_;
+using ::testing::InSequence;
 
-// Interface to be mocked.
-class Database {
- public:
-  virtual ~Database() {}
-  virtual bool Connect(const std::string& url) = 0;
-  virtual int GetData(int id) = 0;
-};
+MockInterface mock;
 
-// Mock class.
-class MockDatabase : public Database {
- public:
-  MOCK_METHOD(bool, Connect, (const std::string& url), (override));
-  MOCK_METHOD(int, GetData, (int id), (override));
-};
+EXPECT_CALL(mock, Compute(5))
+    .Times(2)
+    .WillOnce(Return(10))
+    .WillOnce(Return(20));
 
-TEST(MyTestSuite, TestFetchData) {
-  MockDatabase mock_db;
+EXPECT_CALL(mock, Process(_))
+    .Times(::testing::AnyNumber());
 
-  // Set default action: GetData returns -1 by default.
-  ON_CALL(mock_db, GetData(_)).WillByDefault(Return(-1));
-
-  // Expect Connect called once with "db_url".
-  EXPECT_CALL(mock_db, Connect("db_url")).Times(1).WillOnce(Return(true));
-
-  // Expect GetData called twice with any integer, returning specific values.
-  EXPECT_CALL(mock_db, GetData(_))
-      .WillOnce(Return(42))
-      .WillOnce(Return(43));
-
-  // Call code under test that uses mock_db...
-  EXPECT_TRUE(mock_db.Connect("db_url"));
-  EXPECT_EQ(42, mock_db.GetData(10));
-  EXPECT_EQ(43, mock_db.GetData(11));
+{
+  InSequence s;
+  EXPECT_CALL(mock, Compute(3)).WillOnce(Return(7));
+  EXPECT_CALL(mock, Compute(4)).WillOnce(Return(8));
 }
 ```
 
----
-
-## Common Pitfalls & Tips
-
-- **Virtual Methods Only:** Only virtual methods can be mocked with defaults using `MOCK_METHOD` unless you use special high-performance techniques.
-- **Mock Destructor:** Make sure your interfaces have virtual destructors; missing virtual destructors can cause leaks and undefined behavior.
-- **Call Order Considerations:** Use sequences (`InSequence` or `Sequence`) and `After` to precisely control call order.
-- **Overriding Expectations:** Remember the "last expectation wins" rule - newer `EXPECT_CALL`s shadow older ones.
-- **Suppressing Uninteresting Calls Warnings:** Use `NiceMock` or explicitly expect calls with `.Times(AnyNumber())` to suppress warnings.
-- **Explicit `Times(0)` disallows calls:** Use `EXPECT_CALL(...).Times(0)` to assert a method must never be called.
-- **Handling Move-Only Types:** You can mock methods taking or returning move-only types using `MOCK_METHOD` and `WillOnce` with lambdas.
+In this example:
+- `Compute(5)` is expected twice, returning 10 first and then 20.
+- `Process` can be called any number of times with any argument.
+- Calls to `Compute(3)` and `Compute(4)` are expected in sequence.
 
 ---
 
-## Further Learning
+## Default Behavior with ON_CALL
 
-- [Mocking Reference](reference/mocking.md) — detailed API for `MOCK_METHOD`, `EXPECT_CALL`, and `ON_CALL`
-- [gMock Cheat Sheet](docs/gmock_cheat_sheet.md) — quick recipes and examples
-- [gMock Cookbook](docs/gmock_cook_book.md) — recipes for advanced mocking techniques
-- [Matchers Reference](reference/matchers.md) — building argument matchers
-- [Actions Reference](api-reference/mocking-apis/actions-and-side-effects.md) — specifying mock call behaviors
-- [Mock Object Strictness Modes](api-reference/mocking-apis/strictness-modes.md) — understanding Nice/Naggy/Strict mocks
+While `EXPECT_CALL` sets *expectations* (verifying calls must happen), `ON_CALL` specifies default *behavior* without imposing requirements on call counts.
+
+Syntax:
+
+```cpp
+ON_CALL(mock_object, MethodName(argument_matchers...))
+    .With(multi_arg_matcher)?
+    .WillByDefault(action);
+```
+
+- `ON_CALL` lets you define what a mock method returns or does when called but does *not* expect the call.
+- These default behaviors are superseded by matching `EXPECT_CALL` actions.
+
+Example:
+
+```cpp
+ON_CALL(mock, Compute(_)).WillByDefault(Return(0));
+```
+
+This sets a fallback behavior for all `Compute` calls with any argument.
 
 ---
 
-## Visual Overview of Mock Call Flow
+## Calls and Matching
+
+### Matching Expectations
+
+When a mock method is called, GoogleMock searches the expectations in reverse order of declaration and picks the *last* matching active expectation:
+
+- If none matches but an *ON_CALL* default is present, its action executes.
+- If none matches and no default, the built-in default action runs (e.g., return 0 for numeric types).
+- If the call matches an expectation but exceeds the specified `Times()` count, it is an error unless `RetiresOnSaturation()` is set.
+
+### Uninteresting vs Unexpected Calls
+
+- An *uninteresting call* occurs when a mock method is called that has no matching `EXPECT_CALL` expectation. By default, this emits a warning but does not fail the test.
+- An *unexpected call* occurs when a mock method is called with arguments not matching any set `EXPECT_CALL`. This results in a test failure.
+
+Use `NiceMock` and `StrictMock` wrappers to control warning and failure behavior on uninteresting calls:
+
+- `NiceMock`: suppresses uninteresting call warnings.
+- `StrictMock`: treats uninteresting calls as errors.
+
+---
+
+## Actions: Customizing Mock Method Behavior
+
+An *action* defines what the mock method does when invoked and the expectation matches.
+
+### Common Built-in Actions
+
+- `Return(value)`: Returns the given value.
+- `ReturnRef(variable)`: Returns a reference to a variable.
+- `ReturnPointee(pointer)`: Returns the value pointed to by a pointer at call time.
+- `Invoke(function/functor/lambda)`: Calls a user-defined callable.
+- `DoAll(action1, action2, ...)`: Performs a sequence of actions, returning the last one's result.
+- `SetArgPointee<N>(value)`: Sets the N-th pointer argument's pointee to a value.
+- `SetArrayArgument<N>(begin, end)`: Copies an array of values into a pointer argument.
+- `InvokeArgument<N>(args...)`: Invokes the N-th argument if it is callable.
+- `IgnoreResult(action)`: Ignores the return value of an action, useful when the mock method returns void.
+
+### Defining Custom Actions
+
+You can write your own actions by:
+
+- Using lambdas or functors compatible with the mock method's signature.
+- Implementing the `ActionInterface` for fine control.
+- Using the `ACTION` macros for less verbose but type-inferred simple actions.
+
+Example of a simple lambda action:
+
+```cpp
+EXPECT_CALL(mock, Compute(_))
+    .WillOnce([](int x) { return x * 2; });
+```
+
+### Handling Move-only Types
+
+GoogleMock supports mocking methods with move-only arguments (e.g., `std::unique_ptr`). Use lambdas or explicitly specify actions returning new move-only instances to handle such cases. Example:
+
+```cpp
+EXPECT_CALL(mock, MakeBuzz(_))
+    .WillRepeatedly([](const std::string& text) {
+      return std::make_unique<Buzz>(text);
+    });
+```
+
+### Chaining Actions
+
+Use `WillOnce` multiple times to specify actions on successive calls and `WillRepeatedly` to specify behavior after exhausting `WillOnce` actions. Use `DoAll` to sequence side effects plus a return value.
+
+---
+
+## Managing Call Order and Expectations
+
+### Sequences with `InSequence`
+
+To enforce strict call ordering across multiple expectations, wrap expectations in an `InSequence` block:
+
+```cpp
+{
+  InSequence s;
+  EXPECT_CALL(mock, FirstCall());
+  EXPECT_CALL(mock, SecondCall());
+}
+```
+
+The calls to `FirstCall()` and `SecondCall()` must then occur in that order.
+
+### Partial Ordering with `After`
+
+You can relax ordering to a DAG (directed acyclic graph) using the `.After()` clause:
+
+```cpp
+Expectation e1 = EXPECT_CALL(mock, Init());
+EXPECT_CALL(mock, Use()).After(e1);
+```
+
+Here, `Use()` must happen after `Init()`, but other calls can interleave.
+
+### Retiring Expectations
+
+Use `.RetiresOnSaturation()` to retire expectations after their call limits are met, allowing subsequent matching by other expectations.
+
+Example:
+
+```cpp
+EXPECT_CALL(mock, SetValue(7))
+    .Times(2)
+    .RetiresOnSaturation();
+EXPECT_CALL(mock, SetValue(_))
+    .Times(AnyNumber());
+```
+
+Once two calls to `SetValue(7)` happen, further calls to `SetValue(7)` match the catch-all expectation.
+
+---
+
+## Advanced Concepts and Best Practices
+
+- **Uninteresting Calls:** By default, calling a mock method without an `EXPECT_CALL` leads to a warning but not failure; use `NiceMock` to silence these warnings.
+- **Repeated Actions:** `WillRepeatedly` defines fallback behavior after `WillOnce` actions.
+- **Match Argument Purposely:** Use argument matchers like `_`, `Eq()`, `Ge()`, or custom matchers to define flexible expectations.
+- **Avoid Over-specification:** Only specify expectations and matchers necessary to verify your test's intent.
+- **Verify Early If Needed:** Use `Mock::VerifyAndClearExpectations()` to verify mock usage before destruction.
+- **Manage Mock Lifetime:** Avoid memory leaks to ensure expectations are verified, or explicitly allow leaks with `Mock::AllowLeak()`.
+
+---
+
+## Diagram: Expectation Matching and Call Handling
 
 ```mermaid
 sequenceDiagram
-  participant Test as Test Code
-  participant Mock as Mock Object
-  participant Expect as Expectations
-  participant Action as Action
+    participant Test
+    participant MockObj
+    participant MockMethod
+    participant ExpectationList
 
-  Test->>Mock: Call mock method(args)
-  Mock->>Expect: Find matching EXPECT_CALL
-  alt matches EXPECT_CALL
-    Expect->>Mock: Match successful & check times
-    Mock->>Action: Execute associated behavior
-    Action-->>Mock: Return result or void
-    Mock-->>Test: Return result or void
-  else no matching EXPECT_CALL
-    alt uninteresting call
-      Mock-->>Test: Warn or ignore (depending on strictness)
-    else unexpected call
-      Mock-->>Test: Fail test immediately
+    Test->>MockObj: Call mocked method(args)
+    MockObj->>MockMethod: Receive call
+    MockMethod->>ExpectationList: Search expectations in reverse order
+    alt Expectation matches and call count within limit
+        ExpectationList-->>MockMethod: Matched expectation
+        MockMethod-->>Test: Perform matched action
+    else Expectation matches but saturated
+        MockMethod-->>Test: Error (Too many calls)
+        MockMethod-->>Test: Perform default or fallback action
+    else No matching expectation
+        alt Default action defined via ON_CALL
+            MockMethod-->>Test: Perform ON_CALL action
+        else
+            MockMethod-->>Test: Perform built-in default action
     end
-  end
 ```
 
 ---
+
+## Troubleshooting
+
+### Common Issues
+
+- **Warning: Uninteresting function call** – means a method was called without an `EXPECT_CALL`. If intended, suppress via `NiceMock` or add `EXPECT_CALL(...).Times(AnyNumber())`.
+- **Unexpected mock function call** – a call's arguments don't match any `EXPECT_CALL`; verify your matchers and call sites.
+- **Too many actions** – more `WillOnce` than expected calls; ensure actions correspond precisely with expected call counts.
+- **Unmet expectations** – an expected call was never made; check test logic and ordering.
+
+### Tips
+
+- Use the `--gmock_verbose=info` flag to get detailed logs on how calls were matched.
+- Use sequences and `.After()` to enforce call ordering if your test requires it.
+- Always set expectations (`EXPECT_CALL`) before exercising the mock.
+- If compilation slows with large mocks, move mock class constructor and destructor implementations out of inline headers.
+
+---
+
+## References and Next Steps
+
+- [gMock Cookbook](gmock_cook_book.md): Practical recipes for creating and using mocks.
+- [gMock for Dummies](gmock_for_dummies.md): Beginner-friendly introduction.
+- [Mock Object Creation & Configuration](api-reference/mocking-apis/mock-object-creation.md): API details on defining mocks.
+- [Expectations & Cardinalities](api-reference/mocking-apis/expectations-cardinalities.md): Understanding and controlling call expectations.
+- [Actions & Return Values](api-reference/mocking-apis/actions-and-return-values.md): How to customize mock method behavior.
+- [Matchers Reference](api-reference/mocking-apis/matchers.md): Using argument matchers effectively.
+
+Consider exploring guides on advanced testing patterns and integration for deeper mastery:
+- Parameterized and typed tests to improve test coverage.
+- Death tests for verifying program termination behavior.
+
+---
+
+*This guide empowers you to leverage GoogleMock’s mocking model effectively for behavior-driven testing in C++ applications, ensuring robust, maintainable, and precise unit tests.*
